resources/views/layouts/エラー内容.txt
ec2-user:~/environment/mynews (master) $ npm run watch

> @ watch /home/ec2-user/environment/mynews
> npm run development -- --watch


> @ development /home/ec2-user/environment/mynews
> cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js "--watch"

/home/ec2-user/environment/mynews/webpack.mix.js:17
   .sass('resources/sass/profile.scss', 'public/css');
   ^

SyntaxError: Unexpected token .
    at NativeCompileCache._moduleCompile (/home/ec2-user/environment/mynews/node_modules/v8-compile-cache/v8-compile-cache.js:240:18)
    at Module._compile (/home/ec2-user/environment/mynews/node_modules/v8-compile-cache/v8-compile-cache.js:184:36)
    at Object.Module._extensions..js (module.js:646:10)
    at Module.load (module.js:554:32)
    at tryModuleLoad (module.js:497:12)
    at Function.Module._load (module.js:489:3)
    at Module.require (module.js:579:17)
    at require (/home/ec2-user/environment/mynews/node_modules/v8-compile-cache/v8-compile-cache.js:159:20)
    at Object.<anonymous> (/home/ec2-user/environment/mynews/node_modules/laravel-mix/setup/webpack.config.js:12:1)
    at Module._compile (/home/ec2-user/environment/mynews/node_modules/v8-compile-cache/v8-compile-cache.js:192:30)
    at Object.Module._extensions..js (module.js:646:10)
    at Module.load (module.js:554:32)
    at tryModuleLoad (module.js:497:12)
    at Function.Module._load (module.js:489:3)
    at Module.require (module.js:579:17)
    at require (/home/ec2-user/environment/mynews/node_modules/v8-compile-cache/v8-compile-cache.js:159:20)
    at WEBPACK_OPTIONS (/home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/utils/convert-argv.js:114:13)
    at requireConfig (/home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/utils/convert-argv.js:116:6)
    at /home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/utils/convert-argv.js:123:17
    at Array.forEach (<anonymous>)
    at module.exports (/home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/utils/convert-argv.js:121:15)
    at yargs.parse (/home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/cli.js:71:45)
    at Object.parse (/home/ec2-user/environment/mynews/node_modules/webpack-cli/node_modules/yargs/yargs.js:576:18)
    at /home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/cli.js:49:8
    at Object.<anonymous> (/home/ec2-user/environment/mynews/node_modules/webpack-cli/bin/cli.js:366:3)
    at Module._compile (module.js:635:30)
    at Object.Module._extensions..js (module.js:646:10)
    at Module.load (module.js:554:32)
    at tryModuleLoad (module.js:497:12)
    at Function.Module._load (module.js:489:3)
    at Module.require (module.js:579:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/ec2-user/environment/mynews/node_modules/webpack/bin/webpack.js:156:2)
    at Module._compile (module.js:635:30)
    at Object.Module._extensions..js (module.js:646:10)
    at Module.load (module.js:554:32)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ development: `cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js "--watch"`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ development script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/ec2-user/.npm/_logs/2021-03-14T08_24_30_770Z-debug.log
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ watch: `npm run development -- --watch`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ watch script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/ec2-user/.npm/_logs/2021-03-14T08_24_30_791Z-debug.log
ec2-user:~/environment/mynews (master) $ 